--- a/index.html
+++ b/index.html
@@ -30,16 +30,49 @@
 
     </header>
 
-    <section class='grid-test'>
-        <div class='row'>
-            <div class='col-1-of-2'>
-                col 1 of 2
+    <main>
+        <section class="section-about">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    Exciting tours from adventurous people
+                </h2>
             </div>
-            <div class='col-1-of-2'>
-                col 1 of 2
-            </div>
+            <div class='row'>
+                <div class='col-1-of-2'>
+                    <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam totam exercitationem explicabo possimus veritatis, iste consequatur consectetur aliquam dolore numquam maiores qui sunt neque incidunt omnis suscipit sapiente amet placeat?</p>
 
-        </div>
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        Live adventures like you never have had before
+                    </h3>
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat aut pariatur hic totam est.</p>
+                    <a href='#' class='btn-text'>Learn more &rarr;</a>
+                </div>
+                <div class='col-1-of-2'>
+                    <div class="composition">
+                        <img src="img/nat-1-large.jpg" alt="photo 1" class="composition__photo composition__photo--p1">
+                        <img src="img/nat-2-large.jpg" alt="photo 2" class="composition__photo composition__photo--p2">
+                        <img src="img/nat-3-large.jpg" alt="photo 3" class="composition__photo composition__photo--p3">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+</body>
+
+</html>
+
+
+<!-- <section class='grid-test'>
+        <div class='row'>
+                <div class='col-1-of-2'>
+                    col 1 of 2
+                </div>
+                <div class='col-1-of-2'>
+                    col 1 of 2
+                </div>
+            </div>
         <div class='row'>
             <div class='col-1-of-3'>
                 col 1 of 3
@@ -93,7 +126,4 @@
             </div>
         </div>
 
-    </section>
-</body>
-
-</html>
+    </section> -->
