--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <span class='heading-primary--main'>Outdoors</span>
                 <span class='heading-primary--sub'>is where life happens</span>
             </h1>
-            <a href='#' class='btn btn--white btn--animated'>Discover our tours</a>
+            <a href='#section-tours' class='btn btn--white btn--animated'>Discover our tours</a>
         </div>
 
     </header>
@@ -119,7 +119,7 @@
             </div>
 
         </section>
-        <section class="section-tours">
+        <section class="section-tours" id='section-tours'>
 
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
@@ -152,7 +152,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$297</p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book Now!</a>
+                                <a href="#popup" class="btn btn--white">Book Now!</a>
                             </div>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$497</p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book Now!</a>
+                                <a href="#popup" class="btn btn--white">Book Now!</a>
                             </div>
                         </div>
                     </div>
@@ -212,7 +212,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$897</p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book Now!</a>
+                                <a href="#popup" class="btn btn--white">Book Now!</a>
                             </div>
                         </div>
                     </div>
@@ -343,7 +343,23 @@
             </div>
         </div>
     </footer>
-
+<div class="popup" id='popup'>
+    <div class="popup__content">
+        <div class="popup__left">
+        <img src="img/nat-8.jpg" alt="Tour Photo" class='popup__img'>
+        <img src="img/nat-9.jpg" alt="Tour Photo" class='popup__img'>
+        </div>
+        <div class="popup__right">
+            <a href="#section-tours" class="popup__close">&times;</a>
+            <h2 class='heading-secondary u-margin-bottom-small'>Start Booking Now</h2>
+            <h3 class='heading-tertiary u-margin-bottom-small'>Important &ndash; please read these terms before booking</h3>
+            <p class='popup__text'>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel mattis nunc. Cras sit amet lorem est. Aenean nec leo sem. Mauris quis orci ipsum. Integer volutpat quam id est volutpat facilisis. Nullam vehicula laoreet cursus. Fusce porttitor tellus vel elementum iaculis. Pellentesque felis risus, semper fringilla porta a, egestas sit amet metus. Vestibulum auctor turpis consectetur semper iaculis. Aenean dapibus diam nec nunc hendrerit, vel dignissim dolor fringilla.
+            </p>
+            <a href="#" class="btn btn--green">Book Now</a>
+        </div>
+    </div>
+</div>
 </body>
 
 </html>
