feat: adjusted the html for the footer

--- a/index.html
+++ b/index.html
@@ -358,9 +358,8 @@
             </div>
             <div class="col-1-of-2">
                 <p class="footer__copyright">
-                    Built by <a href='#' class='footer__link'>Anthony Mengel</a> for <a href='#'
-                        class='footer__link'>animation</a>
-                    training. This is where your copyright information would be placed.
+                    Built by <a href='#' class='footer__link'>Anthony Mengel</a> for <a href='#' class='footer__link'>animation</a>
+                    training.
                 </p>
 
             </div>
